Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,64 @@
     */
     const newsData = [
   {
+    "title": "Việt Nam chi gần 10.000 tỉ đồng nhập khẩu thịt chỉ trong \r\nmột tháng",
+    "content": "Trong tháng 2 năm 2025, Việt Nam đã chi hơn 373 triệu USD (tương đương gần 10.000 tỉ đồng) để nhập khẩu thịt, tăng 40,5% so với cùng kỳ năm trước. Đây là một phần trong bối cảnh giá thịt heo trong nước đang tăng cao nhưng sức mua lại yếu. Ấn Độ là thị trường cung cấp thịt lớn nhất cho Việt Nam, theo sau là Nga, Mỹ và Brazil. Trong khi đó, giá thịt heo trong nước cũng đang biến động mạnh, ảnh hưởng đến nguồn cung và sức tiêu thụ.",
+    "link": "https://tuoitre.vn/viet-nam-chi-gan-10-000-ti-dong-nhap-khau-thit-chi-trong-mot-thang-20250311132146449.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Việt Nam đã chi bao nhiêu tiền để nhập khẩu thịt trong tháng 2 năm 2025?",
+    "answers": [
+      {
+        "text": "Gần 10.000 tỉ đồng",
+        "correct": true
+      },
+      {
+        "text": "Hơn 15.000 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "Chỉ 5.000 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 20.000 tỉ đồng",
+        "correct": false
+      },
+      {
+        "text": "7.000 tỉ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "‘Ông lớn’ ngân hàng châu Á ‘ôm’ trái phiếu quốc tế do Vinhomes phát hành",
+    "content": "Vinhomes đang tiến hành phát hành trái phiếu quốc tế tại Singapore nhằm huy động 40 triệu USD cho dự án nhà ở xã hội Happy Home Tràng Cát ở Hải Phòng. Ngân hàng Đầu tư cơ sở hạ tầng châu Á (AIIB) dự kiến sẽ mua trái phiếu này, và Ngân hàng Nhà nước đã có ý kiến không phản đối khoản đầu tư này. Khoản tiền thu được sẽ được sử dụng để xây dựng cơ sở hạ tầng cho dự án và tái cấp vốn cho các khoản nợ USD khác.",
+    "link": "https://tuoitre.vn/ong-lon-ngan-hang-chau-a-om-trai-phieu-quoc-te-do-vinhomes-phat-hanh-20250311135314114.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ai là ngân hàng dự kiến mua trái phiếu quốc tế của Vinhomes?",
+    "answers": [
+      {
+        "text": "Ngân hàng Đầu tư cơ sở hạ tầng châu Á (AIIB)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Nhà nước",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thương mại Cổ phần",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Quốc tế Việt Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trộm cả xe cà phê xanh khi giá cà phê tăng kỷ lục ở Mỹ",
     "content": "Tại Mỹ, tình trạng trộm cắp cà phê xanh trên xe tải đang gia tăng do giá cà phê tăng cao kỷ lục. Các băng nhóm tội phạm tổ chức giả danh công ty vận tải để lấy hàng và sau đó biến mất cùng với lô hàng. Năm vừa qua, hàng chục vụ trộm cắp đã xảy ra, gây thiệt hại lớn cho các nhà nhập khẩu. Để đối phó, một số nhà nhập khẩu đã bắt đầu gắn thiết bị theo dõi vào bao cà phê nhằm giảm nguy cơ mất cắp.",
     "link": "https://tuoitre.vn/trom-ca-xe-ca-phe-xanh-khi-gia-ca-phe-tang-ky-luc-o-my-20250311121615039.htm",
@@ -3080,37 +3138,6 @@
     ]
   },
   {
-    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
-    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
-    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
-    "answers": [
-      {
-        "text": "40 tầng",
-        "correct": true
-      },
-      {
-        "text": "30 tầng",
-        "correct": false
-      },
-      {
-        "text": "24 tầng",
-        "correct": false
-      },
-      {
-        "text": "20 tầng",
-        "correct": false
-      },
-      {
-        "text": "50 tầng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -3137,6 +3164,37 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "answers": [
+      {
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "correct": true
+      },
+      {
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "correct": false
+      },
+      {
+        "text": "Tập trung vào việc học các công nghệ mới",
+        "correct": false
+      },
+      {
+        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -3169,32 +3227,32 @@
     ]
   },
   {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
+    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
+    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
+    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
+    "cat": "thoi-su",
     "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "importance": 7,
+    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
     "answers": [
       {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "text": "40 tầng",
         "correct": true
       },
       {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "text": "30 tầng",
         "correct": false
       },
       {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "text": "24 tầng",
         "correct": false
       },
       {
-        "text": "Tập trung vào việc học các công nghệ mới",
+        "text": "20 tầng",
         "correct": false
       },
       {
-        "text": "Không cần lo lắng về sự phát triển của AI",
+        "text": "50 tầng",
         "correct": false
       }
     ]
