Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Phải đăng ký thường trú cho trẻ trong 60 ngày từ khi làm khai sinh",
+    "content": "Theo Nghị định 154/2024, từ ngày 10-1-2025, cha mẹ hoặc người giám hộ phải đăng ký thường trú cho trẻ trong vòng 60 ngày kể từ khi làm khai sinh. Điều này áp dụng cho trẻ chưa đủ 18 tuổi và yêu cầu các thủ tục kê khai thông tin cư trú. Trường hợp không có nơi thường trú, trẻ có thể đăng ký tại nơi cư trú của bố mẹ hoặc người giám hộ.",
+    "link": "https://tuoitre.vn/phai-dang-ky-thuong-tru-cho-tre-trong-60-ngay-tu-khi-lam-khai-sinh-20250311142333233.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cần làm gì trong 60 ngày sau khi trẻ được khai sinh?",
+    "answers": [
+      {
+        "text": "Đăng ký thường trú cho trẻ",
+        "correct": true
+      },
+      {
+        "text": "Đăng ký tạm trú cho trẻ",
+        "correct": false
+      },
+      {
+        "text": "Không cần làm gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần khai báo thông tin",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Việt Nam chi gần 10.000 tỉ đồng nhập khẩu thịt chỉ trong \r\nmột tháng",
     "content": "Trong tháng 2 năm 2025, Việt Nam đã chi hơn 373 triệu USD (tương đương gần 10.000 tỉ đồng) để nhập khẩu thịt, tăng 40,5% so với cùng kỳ năm trước. Đây là một phần trong bối cảnh giá thịt heo trong nước đang tăng cao nhưng sức mua lại yếu. Ấn Độ là thị trường cung cấp thịt lớn nhất cho Việt Nam, theo sau là Nga, Mỹ và Brazil. Trong khi đó, giá thịt heo trong nước cũng đang biến động mạnh, ảnh hưởng đến nguồn cung và sức tiêu thụ.",
     "link": "https://tuoitre.vn/viet-nam-chi-gan-10-000-ti-dong-nhap-khau-thit-chi-trong-mot-thang-20250311132146449.htm",
@@ -3138,6 +3165,37 @@
     ]
   },
   {
+    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
+    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
+    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
+    "answers": [
+      {
+        "text": "40 tầng",
+        "correct": true
+      },
+      {
+        "text": "30 tầng",
+        "correct": false
+      },
+      {
+        "text": "24 tầng",
+        "correct": false
+      },
+      {
+        "text": "20 tầng",
+        "correct": false
+      },
+      {
+        "text": "50 tầng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -3164,37 +3222,6 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
-    "answers": [
-      {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
-        "correct": true
-      },
-      {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
-        "correct": false
-      },
-      {
-        "text": "Tập trung vào việc học các công nghệ mới",
-        "correct": false
-      },
-      {
-        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -3227,32 +3254,32 @@
     ]
   },
   {
-    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
-    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
-    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
-    "cat": "thoi-su",
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
     "answers": [
       {
-        "text": "40 tầng",
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
         "correct": true
       },
       {
-        "text": "30 tầng",
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
         "correct": false
       },
       {
-        "text": "24 tầng",
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
         "correct": false
       },
       {
-        "text": "20 tầng",
+        "text": "Tập trung vào việc học các công nghệ mới",
         "correct": false
       },
       {
-        "text": "50 tầng",
+        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -3857,6 +3884,33 @@
     ]
   },
   {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -3883,33 +3937,6 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
