Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Phạt 900 triệu đồng vì mua bán bùn thải nạo vét cải tạo kênh",
+    "content": "Ngày 11-3-2025, UBND huyện Tân Hưng, Long An đã thông báo về việc xử phạt 900 triệu đồng đối với hai cá nhân và một công ty vì vi phạm liên quan đến việc mua bán bùn thải nạo vét từ dự án cải tạo kênh Hồng Ngự - Vĩnh Hưng. Công ty TNHH xây dựng cảnh quan Bảo Tín đã mua hơn 15.000 m3 bùn thải và chuyển giao cho đơn vị khác mà không có chức năng xử lý. Hành vi vi phạm này bị xử phạt do không tuân thủ quy định về chuyển giao chất thải rắn thông thường.",
+    "link": "https://tuoitre.vn/phat-900-trieu-dong-vi-mua-ban-bun-thai-nao-vet-cai-tao-kenh-20250311150752149.htm",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao công ty Bảo Tín bị xử phạt 900 triệu đồng?",
+    "answers": [
+      {
+        "text": "Vì mua bán bùn thải nạo vét không đúng quy định.",
+        "correct": true
+      },
+      {
+        "text": "Vì gây ô nhiễm môi trường nghiêm trọng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giấy phép hoạt động.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thực hiện nghĩa vụ thuế.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phải đăng ký thường trú cho trẻ trong 60 ngày từ khi làm khai sinh",
     "content": "Theo Nghị định 154/2024, từ ngày 10-1-2025, cha mẹ hoặc người giám hộ phải đăng ký thường trú cho trẻ trong vòng 60 ngày kể từ khi làm khai sinh. Điều này áp dụng cho trẻ chưa đủ 18 tuổi và yêu cầu các thủ tục kê khai thông tin cư trú. Trường hợp không có nơi thường trú, trẻ có thể đăng ký tại nơi cư trú của bố mẹ hoặc người giám hộ.",
     "link": "https://tuoitre.vn/phai-dang-ky-thuong-tru-cho-tre-trong-60-ngay-tu-khi-lam-khai-sinh-20250311142333233.htm",
@@ -4718,37 +4745,6 @@
       },
       {
         "text": "100 triệu đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đường Suối Cái - Rạch Vẹm đưa khách thẳng đến vương quốc sao biển",
-    "content": "Đường Suối Cái - Rạch Vẹm ở xã Gành Dầu, TP Phú Quốc đã hoàn thành và chính thức đưa vào sử dụng, tạo điều kiện thuận lợi cho du khách đến với Rạch Vẹm, nổi tiếng với vương quốc sao biển. Tuyến đường có chiều dài khoảng 6,5 km, giúp cải thiện giao thông và thu hút nhiều khách du lịch quốc tế. Công trình này không chỉ phục vụ cho du khách mà còn giúp người dân địa phương dễ dàng di chuyển hơn.",
-    "link": "https://tuoitre.vn/duong-suoi-cai-rach-vem-dua-khach-thang-den-vuong-quoc-sao-bien-20250310153855179.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đường Suối Cái - Rạch Vẹm phục vụ cho mục đích gì?",
-    "answers": [
-      {
-        "text": "Đưa khách đến Rạch Vẹm tham quan sao biển",
-        "correct": true
-      },
-      {
-        "text": "Dùng để vận chuyển hàng hóa",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phục vụ cho người dân địa phương",
-        "correct": false
-      },
-      {
-        "text": "Dùng để xây dựng khu nghỉ dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Thay thế cho hệ thống giao thông công cộng",
         "correct": false
       }
     ]
